strava: activity-graphs: fix position absolute overflow issue

--- a/resources/scss/strava.scss
+++ b/resources/scss/strava.scss
@@ -141,6 +141,9 @@
             overflow: scroll;
 
             .strava-activity-graph {
+              .strava-activity-graph-inner {
+                position: relative;
+              }
               canvas {
                 height: 6em;
                 width: 100%;
